--- a/src/deduplicateDocsInFolders.ipynb
+++ b/src/deduplicateDocsInFolders.ipynb
@@ -3264,22 +3264,10 @@
     "for link in soup.find_all('a'):\n",
     "    print(link.get('href'))\n",
     "\n",
-    "def crawl_capture(timestamp, progress_data, visited=None):\n",
+    "def get_links(timestamp, progress_data:\n",
     "    \"\"\"\n",
     "    Crawl a single capture (and sub-links within the same domain/path).\n",
-    "    visited is a set of Wayback URLs already processed to avoid loops.\n",
     "    \"\"\"\n",
-    "    if visited is None:\n",
-    "        visited = set()\n",
-    "\n",
-    "    url = build_wayback_url(timestamp)\n",
-    "    if url in visited:\n",
-    "        return\n",
-    "    visited.add(url)\n",
-    "\n",
-    "    html = fetch_html(url)\n",
-    "    if not html:\n",
-    "        return\n",
     "\n",
     "    date_str = timestamp[:8]\n",
     "    time_str = timestamp[8:]\n",
